# grid2benchmark

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  tutorial.ipynb
examples/: algorithm_template.py  greedy_baseline.py
src/grid2benchmark/: __init__.py  _algorithm.py  _config.py  _kpi.py  _runner.py  _sources.py  cli.py
tests/: conftest.py  test_algorithm.py  test_cli.py  test_config.py  test_integration.py  test_kpi.py  test_runner.py  test_sources.py
