[project]
name = "grid2benchmark"
version = "0.1.0"
description = "Standalone Grid2Op benchmarking library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grid2evaluate",
    "grid2op",
    "lightsim2grid",
    "pandapower>=2.14.11",
    "pypowsybl2grid",
    "numpy>=1.26.4",
    "pyarrow>=14.0",
    "numba>=0.64.0",
]

[project.scripts]
grid2benchmark = "grid2benchmark.cli:main"

[tool.uv.sources]
grid2evaluate = { git = "https://github.com/AI4REALNET/grid2evaluate" }
grid2op = { git = "https://github.com/Grid2op/grid2op.git", rev = "env_recorder" }
pypowsybl2grid = { git = "https://github.com/Grid2op/pypowsybl2grid.git" }

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/grid2benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Run only unit tests:   pytest -m "not integration"
# Run only integration:  pytest -m integration
markers = [
    "integration: tests that spin up a real Grid2Op environment (slow)",
]
# Default timeout (seconds) per test; integration tests override with @pytest.mark.timeout
timeout = 30
